# snap-static-pages

./: .gitignore  snap-static-pages.cabal
src/Snap/: StaticPages.hs
src/Snap/StaticPages/Internal/: Exception.hs  Handlers.hs  Post.hs  Time.hs  Types.hs
src/Snap/StaticPages/Internal/Util/: ExcludeList.hs
