Name:                snap-static-pages
Version:             0.2
Synopsis:            A simple filesystem-based content management system for Snap
Author:              Gregory Collins

Stability:           Experimental
Category:            Web
Build-type:          Simple

Cabal-Version:       >= 1.6

Library
    hs-source-dirs:
        src
    exposed-modules: Snap.StaticPages
    other-modules:   Snap.StaticPages.Internal.Time
                   , Snap.StaticPages.Internal.Exception
                   , Snap.StaticPages.Internal.Util.ExcludeList
                   , Snap.StaticPages.Internal.Types
                   , Snap.StaticPages.Internal.Post
                   , Snap.StaticPages.Internal.Handlers


    ghc-options: -Wall -funbox-strict-fields -O2 -funfolding-use-threshold=16
    Build-Depends: base >= 4 && <5,
                   aeson >= 0.6 && <0.7,
                   attoparsec >= 0.10 && <0.11,
                   blaze-builder,
                   bytestring,
                   containers,
                   data-lens-template >= 2.1 && < 2.2,
                   directory,
                   feed,
                   filepath,
                   heist >= 0.7 && <0.9,
                   mtl >= 2,
                   old-locale,
                   snap >= 0.7 && <0.8,
                   snap-core >= 0.7 && <0.8,
                   split,
                   system-fileio,
                   text >= 0.11 && <0.12,
                   time,
                   transformers,
                   utf8-string,
                   xml,
                   xmlhtml >= 0.1 && <0.2
