Name:                snap-static-pages
Version:             1.0.0.0
Synopsis:            A simple filesystem-based content management system for Snap
Author:              Gregory Collins

Stability:           Experimental
Category:            Web
Build-type:          Simple

Cabal-Version:       >= 1.6

Library
    hs-source-dirs:
        src
    exposed-modules: Snap.StaticPages
    other-modules:   Snap.StaticPages.Internal.Time
                   , Snap.StaticPages.Internal.Exception
                   , Snap.StaticPages.Internal.Util.ExcludeList
                   , Snap.StaticPages.Internal.Types
                   , Snap.StaticPages.Internal.Post
                   , Snap.StaticPages.Internal.Handlers


    ghc-options: -Wall -funbox-strict-fields -O2 -funfolding-use-threshold=16
    Build-Depends: base >= 4 && <5,
                   aeson >= 0.11 && <0.12,
                   attoparsec >= 0.10 && <0.14,
                   blaze-builder,
                   bytestring,
                   containers,
                   directory,
                   feed,
                   filepath,
                   heist >= 0.13 && <1.1,
                   map-syntax >= 0.1 && <0.3,
                   mtl >= 2,
                   old-locale,
                   snap      >= 0.9 && <1.1,
                   snap-core >= 0.9 && <1.1,
                   split,
                   system-fileio,
                   text >= 0.11 && <1.3,
                   time,
                   transformers,
                   xml,
                   xmlhtml >= 0.1 && <0.3
